added more shape in landing

--- a/landing.css
+++ b/landing.css
@@ -16,7 +16,7 @@ h1 {
   max-width: 80ch;
   text-align: center;
   padding-top: 3rem;
-  padding-bottom: 2rem;
+  padding-bottom: 3rem;
 }
 h2 {
   font-size: 1rem;
@@ -83,13 +83,55 @@ h5 {
 }
 
 /* shape */
+.international-container {
+  display: flex;
+  position: absolute;
+  top: 55px;
+  left: 10px;
+  z-index: -10;
+  transform: rotate(-20deg);
+}
+.international {
+  font-family: var(--base-font-family-body);
+  border-radius: 9999px;
+  padding-left: 12px;
+  padding-right: 12px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  background-color: pink;
+  font-weight: 700;
+  display: inline-block;
+  font-size: 0.7rem;
+  color: white;
+}
+.eldercommunity-container {
+  display: flex;
+  position: absolute;
+  top: 330px;
+  right: 100px;
+  z-index: -10;
+  transform: rotate(5deg);
+}
+.eldercommunity {
+  font-family: var(--base-font-family-body);
+  border-radius: 9999px;
+  padding-left: 18px;
+  padding-right: 18px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  background-color: rgb(176, 145, 183);
+  font-weight: 700;
+  display: inline-block;
+  font-size: 0.7rem;
+  color: white;
+}
 .circle-container {
   display: flex;
   position: absolute;
   align-items: center;
   justify-content: center;
   top: 40px;
-  left: 200px;
+  right: 40px;
   z-index: 1;
 }
 .circle {
@@ -119,7 +161,7 @@ h5 {
   display: flex;
   align-items: center;
   justify-content: center;
-  top: 280px;
+  top: 220px;
   right: 50px;
   margin: 50px auto;
   z-index: 1;
@@ -237,6 +279,48 @@ h5 {
   }
 
   /* shapes  */
+  .international-container {
+    display: flex;
+    position: absolute;
+    top: 90px;
+    left: 450px;
+    z-index: -10;
+    transform: rotate(-10deg);
+  }
+  .international {
+    font-family: var(--base-font-family-body);
+    border-radius: 9999px;
+    padding-left: 18px;
+    padding-right: 18px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    background-color: pink;
+    font-weight: 700;
+    display: inline-block;
+    font-size: 1rem;
+    color: white;
+  }
+  .eldercommunity-container {
+    display: flex;
+    position: absolute;
+    top: 280px;
+    right: 450px;
+    z-index: -10;
+    transform: rotate(10deg);
+  }
+  .eldercommunity {
+    font-family: var(--base-font-family-body);
+    border-radius: 9999px;
+    padding-left: 18px;
+    padding-right: 18px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    background-color: rgb(176, 145, 183);
+    font-weight: 700;
+    display: inline-block;
+    font-size: 1rem;
+    color: white;
+  }
   .circle-container {
     display: flex;
     position: absolute;
