--- a/landing.css
+++ b/landing.css
@@ -16,7 +16,7 @@ h1 {
   max-width: 80ch;
   text-align: center;
   padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding-bottom: 4rem;
 }
 h2 {
   font-size: 1rem;
@@ -108,9 +108,9 @@ h5 {
   display: flex;
   position: absolute;
   top: 330px;
-  right: 100px;
+  right: 20px;
   z-index: -10;
-  transform: rotate(5deg);
+  transform: rotate(10deg);
 }
 .eldercommunity {
   font-family: var(--base-font-family-body);
@@ -124,6 +124,39 @@ h5 {
   display: inline-block;
   font-size: 0.7rem;
   color: white;
+}
+.scrolldown-container {
+  display: flex;
+  position: absolute;
+  top: 340px;
+  right: 150px;
+  z-index: -10;
+}
+.scrolldown {
+  font-family: var(--base-font-family-body);
+  width: 75px;
+  height: 75px;
+  border-radius: 50%;
+  padding-left: 18px;
+  padding-right: 18px;
+  padding-top: 12px;
+  padding-bottom: 16px;
+  text-align: center;
+  background-color: rgb(240, 221, 200);
+  font-weight: 700;
+  display: inline-block;
+  font-size: 0.9rem;
+  color: white;
+  animation: float 3s ease-in-out infinite;
+}
+@keyframes float {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-8px);
+  }
 }
 .circle-container {
   display: flex;
@@ -145,7 +178,7 @@ h5 {
   position: absolute;
   align-items: center;
   justify-content: center;
-  top: 200px;
+  top: 180px;
   left: -20px;
   z-index: 1;
 }
@@ -162,7 +195,7 @@ h5 {
   align-items: center;
   justify-content: center;
   top: 220px;
-  right: 50px;
+  right: 40px;
   margin: 50px auto;
   z-index: 1;
 }
@@ -204,21 +237,22 @@ h5 {
   transform: rotate(320deg);
 }
 
-/* .rectangle-container {
+.rectangle-container {
 	position: absolute;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	top: 320px;
-	left: -20px;
-	z-index: 1;	
+	top: 300px;
+	left: 30px;
+	z-index: -10;	
 }
 
 .rectangle {
-	width: 200px;
-	height: 100px;
-	background-color: green;
-} */
+	width: 70px;
+	height: 70px;
+	background-color: rgb(114, 171, 114);
+  transform: rotate(45deg);
+}
 
 @media (min-width: 769px) {
   /* nav bar  */
@@ -321,13 +355,46 @@ h5 {
     font-size: 1rem;
     color: white;
   }
+  .scrolldown-container {
+    display: flex;
+    position: absolute;
+    top: 300px;
+    right: 700px;
+    z-index: -10;
+  }
+  .scrolldown {
+    font-family: var(--base-font-family-body);
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    padding-left: 18px;
+    padding-right: 18px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    text-align: center;
+    background-color: rgb(240, 221, 200);
+    font-weight: 700;
+    display: inline-block;
+    font-size: 1rem;
+    color: white;
+    animation: float 3s ease-in-out infinite;
+  }
+  @keyframes float {
+    0%,
+    100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-10px);
+    }
+  }
   .circle-container {
     display: flex;
     position: absolute;
     align-items: center;
     justify-content: center;
     top: 20px;
-    left: 800px;
+    right: 450px;
     z-index: 1;
   }
   .circle {
