adjusted space a little

--- a/asset/common.css
+++ b/asset/common.css
@@ -7,6 +7,7 @@
   --base-font-family-h1: alfa slab one;
   --base-font-family-body: manrope; 
   --base-color: black;
+  --base-primary-color: pink;
   --base-line-height: 150%;
   --base-text-align: center;
   --base-max-width: 60ch; 
